# jira-ticket-reviewer

./: .env.example  .gitignore  .mcp.json  CHANGELOG.txt  README.md  pyproject.toml  recommend-tickets.md  recommend-tickets.py
config/: expertise.example.json  scorer.example.yaml
plans/: 00-overall-architecture.md  01-cleanup.md  02-microkernel-core.md  03-plugins.md
src/jira_reviewer/: __init__.py  server.py
src/jira_reviewer/core/: __init__.py  engine.py  jira_client.py  models.py  plugin.py
src/jira_reviewer/plugins/: __init__.py  example.py  time_to_completion.py
src/jira_reviewer/tools/: _helpers.py  list_plugins.py  score_tickets.py
